# CBCBackEnd

./: CMakeLists.txt  README.md
include/OpenSoT/solvers/: CBCBackEnd.h
src/: CBCBackEnd.cpp
tests/: CMakeLists.txt  TestCBC.cpp
